# swc-plugin-add-import-extension

./: .clippy.toml  .editorconfig  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain  swc-plugin-add-import-extension.code-workspace  swc-plugin-add-mjs-ext.code-workspace
.cargo/: config  config.toml
.changeset/: config.json
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: format_build_test.yml  publish.yml  update_contributor_list.yml
examples/api/: .swcrc.json  package.json
examples/api/.build/: build.mjs  readPipe.mjs
examples/api/src/: index.ts
examples/api/src/utils/: helloWorld.ts  index.ts
examples/api/tests/expected/: index.mjs
examples/api/tests/expected/utils/: index.mjs
examples/cli/: .swcrc  package.json
examples/cli/src/: index.ts
examples/cli/src/utils/: class.ts  index.ts
examples/cli/tests/expected/: index.mjs
examples/cli/tests/expected/utils/: class.mjs  index.mjs
src/: lib.rs  plugin.rs
src/plugin/: config.rs  mod.rs  rewriter.rs
tests/: fixture.rs  utils.rs
tests/fixture/export_all/: input.js  output.js
tests/fixture/import/: input.js  output.js
tests/fixture/named_export/: input.js  output.js
tests/fixture/relative/: input.js  output.js
tests/fixture/standard/: input.js
tests/fixture/typescript/class/: input.ts  output.js
