[package]
authors = ["Mehdi Lahlou <mlahlou@protonmail.ch>"]
description = "SWC plugin to add extensions to esm import and export specifiers"
edition = "2021"
license = "MIT"
name = "swc_plugin_add_import_extension"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde = "1"
serde_json = "1.0.81"
swc_cached = "0.3.5"
swc_core = { version = "0.14.0", features = [
  "plugin_transform",
  "utils",
  "visit",
  "ast",
  "common",
  "parser"
] }
tracing = "*"

[dev-dependencies]
swc_ecma_transforms_testing = "0.106.0"
testing = "0.29.4"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
