[package]
authors = ["Mehdi Lahlou <mlahlou@protonmail.ch>"]
description = "SWC plugin to add extensions to esm import and export module names"
edition = "2021"
license = "MIT"
name = "swc_plugin_add_import_extension"
version = "1.0.0-alpha.5"
homepage = "https://github.com/medfreeman/swc-plugin-add-import-extension"
documentation = "https://github.com/medfreeman/swc-plugin-add-import-extension/README.md"
repository = "https://github.com/medfreeman/swc-plugin-add-import-extension.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde = "1"
serde_json = "1.0.85"
swc_core = { version = "0.75.48", features = [
  "cached",
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
] }
tracing = "*"
url = "2.3.1"

[dev-dependencies]
swc_core = { version = "0.75.48", features = ["testing_transform"] }
testing = "0.33.0"

[package.metadata.bin]
cargo-binstall = { version = "1.4.5", locked = true }
cargo-watch = { version = "8.4.1", locked = true }

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
